crates/general/fixtures/invalid/union_membership.zt
-- Expected: semantic-error (parse-clean + semantic diagnostic)
-- Spec: unions §16 — atom values must belong to their declared union set.

Env :: type [#dev; #test; #prod;]

-- #staging is not in [#dev; #test; #prod;]
bad_env : Env = #staging

-- #production is also not a member
also_bad : Env = #production

-- Passing a non-member to a function expecting Env
greet :: Env -> Text
      :: #dev { "dev" }
      :: #test { "test" }
      :: #prod { "prod" }

-- calling greet with an atom not in Env
result := greet #staging

result
